--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Ignore the gap....Yes I did eat one before I filmed this, I couldn't resist 🙈🤣</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>The Man Who changed the pizza Business forever!</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>This Meditation Opens Up Past Life Memories | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Why Z-Score RSI Beats Regular RSI in Choppy Markets 💡</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>How Yantras Influence Your Body | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>The Big Challenge Before Humanity | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Is the Labour government over?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Levels of Spiritual Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>My New "Trading System" Kills the Market Over 17 Years</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>Behind the Counter at a local Japanese Hamburger Shop</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2316,7 +2316,7 @@
                     <div class="video-info">
                         <h3>Behind the Counter at a #1 Japanese Pizza Restaurant</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 12, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Why Z-Score RSI Beats Regular RSI in Choppy Markets 💡</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Is the Labour government over?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>My New "Trading System" Kills the Market Over 17 Years</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>This Meditation Opens Up Past Life Memories | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>How Yantras Influence Your Body | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>The Big Challenge Before Humanity | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Levels of Spiritual Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Ignore the gap....Yes I did eat one before I filmed this, I couldn't resist 🙈🤣</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8746,7 +8746,7 @@
                         <div class="video-info">
                             <h3>The Man Who changed the pizza Business forever!</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9594,7 +9594,7 @@
                         <div class="video-info">
                             <h3>Behind the Counter at a local Japanese Hamburger Shop</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9792,7 +9792,7 @@
                         <div class="video-info">
                             <h3>Behind the Counter at a #1 Japanese Pizza Restaurant</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 12, 2025</div>
                         </div>
                     </a>
                 </div>
