--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Why Z-Score RSI Beats Regular RSI in Choppy Markets 💡</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>How Yantras Influence Your Body | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2294,7 +2294,7 @@
                     <div class="video-info">
                         <h3>A Reason Not to Watch the News</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 13, 2025</div>
                     </div>
                 </a>
             </div>
@@ -2305,7 +2305,7 @@
                     <div class="video-info">
                         <h3>I’m Back on YouTube! Why I Disappeared for 3 Months.</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 13, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Why Z-Score RSI Beats Regular RSI in Choppy Markets 💡</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>How Yantras Influence Your Body | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7821,7 +7821,7 @@
                         <div class="video-info">
                             <h3>A Reason Not to Watch the News</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 13, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -8267,7 +8267,7 @@
                         <div class="video-info">
                             <h3>I’m Back on YouTube! Why I Disappeared for 3 Months.</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 13, 2025</div>
                         </div>
                     </a>
                 </div>
